--- a/src/components/standings/standings-component.css
+++ b/src/components/standings/standings-component.css
@@ -5,6 +5,7 @@
     justify-content: center;
     text-align: center;
     gap: 10px;
+    color: white;
 }
 
 .team-logo-table {
